syntax = "proto3";

package change_events;

message CpuChangeEvent {
    float usage = 1;
}